# negative_scan

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  equations.md  process.py  process2.py
cmake/modules/: FindLibRaw.cmake
include/: ControlData.h  ControlsWidget.h  HistogramWidget.h  MainWindow.h  PreviewWidget.h  QTRawProcessor.h  RGBControls.h  RawProcessor.h  Timer.h  control_data.h  image.h  negascan.h  raw_processor.h
resources/: preview.frag  preview.vert  shaders.qrc
src/: CMakeLists.txt  ControlsWidget.cpp  HistogramWidget.cpp  MainWindow.cpp  PreviewWidget.cpp  QTRawProcessor.cpp  RGBControls.cpp  RawProcessor.cpp  image.cpp  main.cpp  negascan.cpp  old_main.cpp  raw_processor.cpp
src/hl/: histogram.cpp  invert_negative.cpp  minmax.cpp  subsample.cpp  subsampler_generator.cpp
src/mgl/: CMakeLists.txt  application.cpp  application.h
src/shaders/: simple.frag  simple.vert
vendors/: Makefile
